@@ -1,3 +1,9 @@
+2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/sidebar.c:
+   Don't remove and add the symbols tree view if we re-add the same one.
+
+
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * configure.ac, doc/geany.txt, geany.nsi, geany_private.rc,
